frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vhg-frontend-ingress
  namespace: vhg-1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /(config\.js|assets/.*|vite\.svg)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
